qt: make ml entry point manager
Remaining:
+ remove all qInfo funcs
+ correct event-based update of model
~ UI needs more work
- conditional compilation in simple_preferences.(hpp / cpp)
- get list of banned folders

--- a/modules/gui/qt/Makefile.am
+++ b/modules/gui/qt/Makefile.am
@@ -108,6 +108,8 @@ libqt_plugin_la_SOURCES = \
 	gui/qt/components/recent_media_model.hpp \
 	gui/qt/components/settings.cpp \
 	gui/qt/components/settings.hpp \
+	gui/qt/components/ml_folders_model.hpp  \
+	gui/qt/components/ml_folders_model.cpp \
 	gui/qt/components/voutwindow/videosurface.cpp \
 	gui/qt/components/voutwindow/videosurface.hpp \
 	gui/qt/components/voutwindow/qvoutwindow.cpp \
@@ -261,6 +263,7 @@ nodist_libqt_plugin_la_SOURCES = \
 	gui/qt/components/custom_menus.moc.cpp \
 	gui/qt/components/recent_media_model.moc.cpp \
 	gui/qt/components/settings.moc.cpp \
+	gui/qt/components/ml_folders_model.moc.cpp \
 	gui/qt/components/voutwindow/videosurface.moc.cpp \
 	gui/qt/components/voutwindow/qvoutwindow.moc.cpp \
 	gui/qt/components/voutwindow/qvoutwindowdummy.moc.cpp \
